// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons render AddIcon 1`] = `
<div>
  <span
    aria-label="AddIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M13 11V3.993A.997.997 0 0 0 12 3c-.556 0-1 .445-1 .993V11H3.993A.997.997 0 0 0 3 12c0 .557.445 1 .993 1H11v7.007c0 .548.448.993 1 .993.556 0 1-.445 1-.993V13h7.007A.997.997 0 0 0 21 12c0-.556-.445-1-.993-1z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render ArrowLeftIcon 1`] = `
<div>
  <span
    aria-label="ArrowLeftIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M12.207 5.793a1 1 0 0 1 0 1.414L8.414 11H18a1 1 0 1 1 0 2H8.414l3.793 3.793a1 1 0 1 1-1.415 1.414l-5.499-5.5A1 1 0 0 1 5 12.028v-.057a1 1 0 0 1 .293-.678l5.499-5.5a1 1 0 0 1 1.415 0"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render ArrowRightIcon 1`] = `
<div>
  <span
    aria-label="ArrowRightIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11.793 5.793a1 1 0 0 0 0 1.414L15.586 11H6a1 1 0 0 0 0 2h9.586l-3.793 3.793a1 1 0 0 0 0 1.414c.39.39 1.024.39 1.415 0l5.499-5.5a1 1 0 0 0 .293-.679v-.057a1 1 0 0 0-.293-.678l-5.499-5.5a1 1 0 0 0-1.415 0"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render BillingIcon 1`] = `
<div>
  <span
    aria-label="BillingIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="M7 4v16h10V4zm-2-.01C5 2.892 5.897 2 7.006 2h9.988C18.102 2 19 2.898 19 3.99v16.02c0 1.099-.897 1.99-2.006 1.99H7.006A2.003 2.003 0 0 1 5 20.01z"
          fill-rule="nonzero"
        />
        <rect
          height="2"
          rx="1"
          width="8"
          x="8"
          y="6"
        />
        <rect
          height="2"
          rx="1"
          width="5"
          x="8"
          y="9"
        />
        <rect
          height="2"
          rx="1"
          width="5"
          x="8"
          y="12"
        />
        <rect
          height="2"
          rx="1"
          width="5"
          x="8"
          y="15"
        />
        <rect
          height="2"
          rx="1"
          width="2"
          x="14"
          y="12"
        />
        <rect
          height="2"
          rx="1"
          width="2"
          x="14"
          y="15"
        />
        <rect
          height="2"
          rx="1"
          width="2"
          x="14"
          y="9"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render BulletListIcon 1`] = `
<div>
  <span
    aria-label="BulletListIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <rect
          height="2"
          rx="1"
          width="8"
          x="10"
          y="15"
        />
        <rect
          height="2"
          rx="1"
          width="2"
          x="6"
          y="15"
        />
        <rect
          height="2"
          rx="1"
          width="8"
          x="10"
          y="11"
        />
        <rect
          height="2"
          rx="1"
          width="2"
          x="6"
          y="11"
        />
        <rect
          height="2"
          rx="1"
          width="8"
          x="10"
          y="7"
        />
        <rect
          height="2"
          rx="1"
          width="2"
          x="6"
          y="7"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render CheckIcon 1`] = `
<div>
  <span
    aria-label="CheckIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M6.735 12.322a1 1 0 0 0-1.47 1.356l3.612 3.919c.537.526 1.337.526 1.834.03l.364-.359a2336 2336 0 0 0 3.939-3.883l.04-.04a493 493 0 0 0 3.658-3.643 1 1 0 0 0-1.424-1.404 518 518 0 0 1-3.64 3.625l-.04.04a2049 2049 0 0 1-3.775 3.722z"
        fill="currentcolor"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render CopyIcon 1`] = `
<div>
  <span
    aria-label="CopyIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
      >
        <path
          d="M10 19h8V8h-8zM8 7.992C8 6.892 8.902 6 10.009 6h7.982C19.101 6 20 6.893 20 7.992v11.016c0 1.1-.902 1.992-2.009 1.992H10.01A2 2 0 0 1 8 19.008z"
        />
        <path
          d="M5 16V4.992C5 3.892 5.902 3 7.009 3H15v13zm2 0h8V5H7z"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render CrossIcon 1`] = `
<div>
  <span
    aria-label="CrossIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414z"
        fill="currentcolor"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render DiscoverFilledIcon 1`] = `
<div>
  <span
    aria-label="DiscoverFilledIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 21a9 9 0 1 1 0-18 9 9 0 0 1 0 18m-1.101-10.78c-.248.127-.55.427-.678.678L8.24 14.797c-.55 1.084-.118 1.514.965.963l3.898-1.98c.248-.127.55-.427.677-.678l1.981-3.899c.552-1.083.12-1.514-.964-.964zM12 13a1 1 0 1 1 0-2 1 1 0 0 1 0 2"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render EditorTextColorIcon 1`] = `
<div>
  <span
    aria-label="EditorTextColorIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <rect
        fill="currentcolor"
        fill-rule="evenodd"
        height="14"
        rx="2"
        width="14"
        x="5"
        y="5"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render HomeCircleIcon 1`] = `
<div>
  <span
    aria-label="HomeCircleIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M10.5 16H9a1 1 0 0 1-1-1v-4.946l3.28-3.379.021-.021a1 1 0 0 1 1.414.021L16 10.059V15a1 1 0 0 1-1 1h-1.5v-2.5a1.5 1.5 0 0 0-3 0zm7.5-3.936a1 1 0 0 0 1.215-1.564L14.15 5.282a3 3 0 0 0-4.242-.063l-.063.063L4.78 10.5A1 1 0 0 0 6 12.061V15a3 3 0 0 0 3 3h6a3 3 0 0 0 3-3zM12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render HomeIcon 1`] = `
<div>
  <span
    aria-label="HomeIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M10 19v-4.5a2 2 0 1 1 4 0V19h4a1 1 0 0 0 1-1v-7.831l-6.293-6.296a1 1 0 0 0-1.414 0L5 10.169V18a1 1 0 0 0 1 1zm11-6.83V18a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5.83l-.04.04c-.39.39-1.03.39-1.42 0s-.39-1.03 0-1.42l8.339-8.331a3 3 0 0 1 4.242 0l8.339 8.331c.39.39.39 1.03 0 1.42s-1.03.39-1.42 0z"
        fill="currentcolor"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render LightbulbIcon 1`] = `
<div>
  <span
    aria-label="LightbulbIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11.998 4A5.997 5.997 0 0 0 6 9.998c0 2.218 2.288 4.484 2.288 4.484.39.387.71 1.112.71 1.611s.45.907 1 .907h4c.55 0 1-.408 1-.907s.32-1.224.71-1.611c0 0 2.288-2.266 2.288-4.484A5.997 5.997 0 0 0 11.998 4m0 2a4.003 4.003 0 0 1 3.998 3.998c0 1.029-1.145 2.511-1.695 3.064-.507.501-.912 1.216-1.13 1.938h-2.346c-.217-.722-.622-1.435-1.125-1.934-.555-.557-1.7-2.039-1.7-3.068A4.003 4.003 0 0 1 11.998 6m2.965 13c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v.003c0 .55.45 1 1 1h4c.55 0 1-.45 1-1z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render LinkFilledIcon 1`] = `
<div>
  <span
    aria-label="LinkFilledIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill-rule="evenodd"
      >
        <circle
          cx="12"
          cy="12"
          fill="currentcolor"
          r="10"
        />
        <path
          d="m11.75 16.15.548-.537a.585.585 0 0 0 0-.838.61.61 0 0 0-.854 0l-.574.564c-.564.553-1.483.662-2.101.168a1.482 1.482 0 0 1-.119-2.223l1.694-1.663a1.543 1.543 0 0 1 2.156 0l.647.635.853-.839-.646-.635a2.775 2.775 0 0 0-3.863 0l-1.694 1.664a2.66 2.66 0 0 0 .208 3.979c1.104.884 2.738.715 3.746-.275"
          fill="inherit"
        />
        <path
          d="m12.25 7.85-.547.537a.585.585 0 0 0 0 .838.61.61 0 0 0 .853 0l.574-.564c.564-.553 1.483-.662 2.101-.168.71.57.75 1.603.119 2.223l-1.694 1.663a1.543 1.543 0 0 1-2.156 0l-.647-.635-.853.839.646.635a2.775 2.775 0 0 0 3.863 0l1.695-1.664a2.66 2.66 0 0 0-.209-3.979c-1.104-.884-2.738-.715-3.746.275"
          fill="inherit"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render LinkIcon 1`] = `
<div>
  <span
    aria-label="LinkIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="m12.856 5.457-.937.92a1 1 0 0 0 0 1.437 1.047 1.047 0 0 0 1.463 0l.984-.966c.967-.95 2.542-1.135 3.602-.288a2.54 2.54 0 0 1 .203 3.81l-2.903 2.852a2.646 2.646 0 0 1-3.696 0l-1.11-1.09L9 13.57l1.108 1.089c1.822 1.788 4.802 1.788 6.622 0l2.905-2.852a4.558 4.558 0 0 0-.357-6.82c-1.893-1.517-4.695-1.226-6.422.47"
        />
        <path
          d="m11.144 19.543.937-.92a1 1 0 0 0 0-1.437 1.047 1.047 0 0 0-1.462 0l-.985.966c-.967.95-2.542 1.135-3.602.288a2.54 2.54 0 0 1-.203-3.81l2.903-2.852a2.646 2.646 0 0 1 3.696 0l1.11 1.09L15 11.43l-1.108-1.089c-1.822-1.788-4.802-1.788-6.622 0l-2.905 2.852a4.558 4.558 0 0 0 .357 6.82c1.893 1.517 4.695 1.226 6.422-.47"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render LockFilledIcon 1`] = `
<div>
  <span
    aria-label="LockFilledIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M8 10V8.002A4.004 4.004 0 0 1 12 4a4 4 0 0 1 4 4.002V10a2 2 0 0 1 2 2v6c0 1.105-.902 2-2.009 2H8.01A2 2 0 0 1 6 18v-6c0-1.102.897-1.995 2-2m2 0h4V8.002A2 2 0 0 0 12 6c-1.102 0-2 .898-2 2.002zm2 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render MediaServicesOvalIcon 1`] = `
<div>
  <span
    aria-label="MediaServicesOvalIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 20c-4.943 0-9-3.55-9-8s4.057-8 9-8 9 3.55 9 8-4.057 8-9 8m0-2c3.893 0 7-2.718 7-6s-3.107-6-7-6-7 2.718-7 6 3.107 6 7 6"
        fill="currentcolor"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render NotificationAllIcon 1`] = `
<div>
  <span
    aria-label="NotificationAllIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="M11.384 5.478A5.04 5.04 0 0 1 14.954 4c.972 0 1.945.28 2.788.839q.03-.038.066-.074a1.01 1.01 0 1 1 1.354 1.494 5.05 5.05 0 0 1-.64 6.356l-.725.725c-.782.783-1.813 2.21-2.312 3.207l-1.509 3.016c-.249.5-.773.584-1.171.187l-8.556-8.555c-.397-.397-.308-.924.187-1.172l3.017-1.508c.989-.494 2.42-1.526 3.206-2.312z"
          fill-rule="nonzero"
        />
        <path
          d="m7.92 3.62.4.97a1 1 0 1 1-1.85.77l-.4-.97a1 1 0 1 1 1.85-.76M4.38 6.08l.97.4a1 1 0 0 1-.77 1.85l-.97-.4a1 1 0 0 1 .77-1.85m11.84 12a1 1 0 0 0-.54 1.31l.4.97a1 1 0 1 0 1.85-.77l-.4-.97a1 1 0 0 0-1.31-.54m1.86-1.86a1 1 0 0 0 .54 1.31l.97.4a1 1 0 0 0 .77-1.85l-.97-.4a1 1 0 0 0-1.31.54M6.49 17.67a2 2 0 0 0 2.83 0l-2.83-2.83a2 2 0 0 0 0 2.83"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render OfficeBuildingFilledIcon 1`] = `
<div>
  <span
    aria-label="OfficeBuildingFilledIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill-rule="evenodd"
      >
        <path
          d="M8 6H5.009C3.902 6 3 6.962 3 8.15v10.7C3 20.04 3.9 21 5.009 21h5.487H8z"
          fill="currentcolor"
          fill-rule="nonzero"
        />
        <path
          d="M6 10h2v2H6zm0 3h2v2H6z"
          fill="inherit"
        />
        <path
          d="M9 4.995C9 3.893 9.902 3 11.009 3h7.982C20.101 3 21 3.893 21 4.995v14.01A2.004 2.004 0 0 1 18.991 21H9z"
          fill="currentcolor"
        />
        <path
          d="M12 7h2v2h-2zm0 3h2v2h-2zm0 3h2v2h-2zm2 3h2v3h-2zm2-9h2v2h-2zm0 3h2v2h-2zm0 3h2v2h-2z"
          fill="inherit"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render PeopleGroupIcon 1`] = `
<div>
  <span
    aria-label="PeopleGroupIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="M8.13 10H4a2 2 0 0 0-2 2v3.73c0 1.31 1.87 2.05 4 2.23V15a3 3 0 0 1 3-3h.35a4 4 0 0 1-1.23-2m7.75 0H20c1.11 0 2 .89 2 2v3.73c0 1.31-1.87 2.05-4 2.23V15a3 3 0 0 0-3-3h-.35a4 4 0 0 0 1.23-2M9.97 5.55a3 3 0 1 0-1.96 3.27 4 4 0 0 1 1.96-3.27M16 8.83a3 3 0 1 0-1.96-3.28A4 4 0 0 1 16 8.83"
        />
        <path
          d="M7 15c0-1.105.887-2 2-2h6c1.105 0 2 .885 2 2v3.73c0 3.027-10 3.027-10 0z"
        />
        <circle
          cx="12"
          cy="9"
          r="3"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render PersonIcon 1`] = `
<div>
  <span
    aria-label="PersonIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="M6 14c0-1.105.902-2 2.009-2h7.982c1.11 0 2.009.894 2.009 2.006v4.44c0 3.405-12 3.405-12 0z"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render RefreshIcon 1`] = `
<div>
  <span
    aria-label="RefreshIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="M8 6.003v2.995a1 1 0 1 0 2 0V5.102C10 4.494 9.507 4 8.9 4H5a1 1 0 0 0 0 2.003z"
          fill-rule="nonzero"
        />
        <path
          d="M9.428 18.018C7.351 16.989 6 14.807 6 12.37c0-2.266 1.167-4.319 3.02-5.425.48-.286.646-.922.371-1.421a.98.98 0 0 0-1.364-.386C5.557 6.611 4 9.35 4 12.37c0 3.248 1.802 6.158 4.57 7.529.498.247 1.095.026 1.332-.493.237-.52.025-1.141-.474-1.388"
          fill-rule="nonzero"
        />
        <path
          d="M14 15.002v3.896c0 .608.493 1.102 1.1 1.102H19a1 1 0 0 0 0-2.003h-3v-2.995a1 1 0 1 0-2 0"
        />
        <path
          d="M14.097 4.596c-.237.52-.025 1.14.474 1.387 2.077 1.029 3.428 3.21 3.428 5.647 0 2.266-1.167 4.32-3.021 5.425a1.063 1.063 0 0 0-.37 1.42c.274.5.885.673 1.364.387 2.47-1.473 4.027-4.212 4.027-7.232 0-3.248-1.802-6.158-4.57-7.528A.96.96 0 0 0 15.002 4a1 1 0 0 0-.905.596"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render SearchIcon 1`] = `
<div>
  <span
    aria-label="SearchIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="m16.436 15.085 3.94 4.01a1 1 0 0 1-1.425 1.402l-3.938-4.006a7.5 7.5 0 1 1 1.423-1.406M10.5 16a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render SendIcon 1`] = `
<div>
  <span
    aria-label="SendIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
      >
        <path
          d="M6.978 19.477c0 1.371 1.645 2.042 2.577 1.05L21.558 7.723C22.518 6.695 21.803 5 20.409 5H3.496C2.178 5 1.505 6.607 2.418 7.572l4.56 4.828zm1.993-1.265v-6.627L3.856 6.169c.303.322.078.857-.36.857h15.963z"
        />
        <path
          d="m8.416 12.902 4.01-1.95a1.04 1.04 0 0 0 .474-1.365.98.98 0 0 0-1.324-.489l-4.01 1.95c-.497.242-.71.853-.475 1.364a.98.98 0 0 0 1.325.49"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render SettingsIcon 1`] = `
<div>
  <span
    aria-label="SettingsIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11.701 16.7a5.002 5.002 0 1 1 0-10.003 5.002 5.002 0 0 1 0 10.004m8.368-3.117a1.995 1.995 0 0 1-1.346-1.885c0-.876.563-1.613 1.345-1.885a.48.48 0 0 0 .315-.574 9 9 0 0 0-.836-1.993.48.48 0 0 0-.598-.195 2.04 2.04 0 0 1-1.29.08 1.99 1.99 0 0 1-1.404-1.395 2.04 2.04 0 0 1 .076-1.297.48.48 0 0 0-.196-.597 9 9 0 0 0-1.975-.826.48.48 0 0 0-.574.314 1.995 1.995 0 0 1-1.885 1.346 1.99 1.99 0 0 1-1.884-1.345.48.48 0 0 0-.575-.315c-.708.2-1.379.485-2.004.842a.47.47 0 0 0-.198.582A2.002 2.002 0 0 1 4.445 7.06a.48.48 0 0 0-.595.196 9 9 0 0 0-.833 1.994.48.48 0 0 0 .308.572 1.995 1.995 0 0 1 1.323 1.877c0 .867-.552 1.599-1.324 1.877a.48.48 0 0 0-.308.57 9 9 0 0 0 .723 1.79.477.477 0 0 0 .624.194c.595-.273 1.343-.264 2.104.238.117.077.225.185.302.3.527.8.512 1.58.198 2.188a.473.473 0 0 0 .168.628 9 9 0 0 0 2.11.897.474.474 0 0 0 .57-.313 1.995 1.995 0 0 1 1.886-1.353c.878 0 1.618.567 1.887 1.353a.475.475 0 0 0 .57.313 9 9 0 0 0 2.084-.883.473.473 0 0 0 .167-.631c-.318-.608-.337-1.393.191-2.195.077-.116.185-.225.302-.302.772-.511 1.527-.513 2.125-.23a.477.477 0 0 0 .628-.19 9 9 0 0 0 .728-1.793.48.48 0 0 0-.314-.573"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render SignInIcon 1`] = `
<div>
  <span
    aria-label="SignInIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="M15.503 3H12v2h7v14h-7v2h7.006c1.1 0 1.994-.893 1.994-1.995V4.995A1.993 1.993 0 0 0 19.006 3z"
        />
        <path
          d="M3.977 11A.99.99 0 0 0 3 12.001c0 .551.437.999.977.999h11.047a.99.99 0 0 0 .976-.999.99.99 0 0 0-.976-1.001z"
        />
        <path
          d="M12.303 8.305a1.053 1.053 0 0 0 0 1.478L14.5 12l-2.197 2.217a1.05 1.05 0 0 0 0 1.476c.404.409 1.06.409 1.465 0l2.93-2.955a1.055 1.055 0 0 0 0-1.477l-2.93-2.956a1.034 1.034 0 0 0-1.465 0"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render SignOutIcon 1`] = `
<div>
  <span
    aria-label="SignOutIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="M4.977 11A.99.99 0 0 0 4 12c0 .551.437 1 .977 1h11.046A.99.99 0 0 0 17 12a.99.99 0 0 0-.977-1z"
        />
        <path
          d="M6.23 8.31 3.3 11.27a1.05 1.05 0 0 0 0 1.48l2.93 2.96a1.03 1.03 0 0 0 1.47 0 1.05 1.05 0 0 0 0-1.48L5.5 12l2.2-2.22a1.05 1.05 0 0 0 0-1.48 1.03 1.03 0 0 0-1.47 0M15.5 3H12v2h7v14h-7v2h7.01c1.1 0 1.99-.89 1.99-1.99V5a1.99 1.99 0 0 0-1.99-2z"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Icons render TrashIcon 1`] = `
<div>
  <span
    aria-label="TrashIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M5 5a1 1 0 0 0-1 1v1h16V6a1 1 0 0 0-1-1zm11.15 15h-8.3a1 1 0 0 1-.99-.83L5 8h14l-1.86 11.17a1 1 0 0 1-.99.83M9 4.5a.5.5 0 0 1 .49-.5h5.02a.5.5 0 0 1 .49.5V5H9z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render VidPlayIcon 1`] = `
<div>
  <span
    aria-label="VidPlayIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M8.595 19.522C7.162 20.364 6 19.702 6 18.04V5.963C6 4.3 7.158 3.635 8.595 4.479l11.083 6.51c.951.559.958 1.46 0 2.023z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Icons render WatchFilledIcon 1`] = `
<div>
  <span
    aria-label="WatchFilledIcon"
    class="css-snhnyn"
    data-vc="icon-undefined"
    role="img"
    style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
  >
    <svg
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
    >
      <g
        fill="currentcolor"
        fill-rule="evenodd"
      >
        <path
          d="M11.983 15.984a4.005 4.005 0 0 1-4.002-4c0-2.206 1.795-4 4.002-4a4.005 4.005 0 0 1 4.002 4c0 2.206-1.795 4-4.002 4M12 4C6.48 4 2 8.84 2 12c0 3.086 4.577 8 10 8s10-4.914 10-8c0-3.16-4.481-8-10-8"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
      </g>
    </svg>
  </span>
</div>
`;
